# lagrangebench

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  LICENSE  README.md  download_data.sh  embedding_k.py  main.py  plots_multiple_samples.ipynb  plots_state_avg.ipynb  pyproject.toml  requirements.txt  requirements_cuda.txt  setup.py  train_or_infer_jax.py  train_or_infer_torch.py  tst.py  two_GNNs.py  two_GNNs_combined.ipynb
.github/workflows/: publish.yml  ruff.yml  tests.yml
configs/: defaults.yaml  gns.yaml  gns_hook.yaml  gns_lj.yaml  gns_rpf.yaml  gns_tgv.yaml  gns_tgv10.yaml  gns_tgv_debug.yaml  segnn.yaml  segnn_att_hook.yaml  segnn_att_lj.yaml  segnn_att_rpf.yaml  segnn_att_tgv.yaml  segnn_att_tgv10.yaml  segnn_hook.yaml  segnn_lj.yaml  segnn_rpf.yaml  segnn_tgv.yaml  segnn_tgv10.yaml
configs/WaterDrop_2d/: base.yaml  gns.yaml
configs/asegnn/: _tgv.yaml  hook.yaml  rpf.yaml  tgv.yaml
configs/dam_2d/: base.yaml  gns.yaml  pde_refiner.yaml  segnn.yaml
configs/gns/: hook.yaml  rpf.yaml  tgv.yaml
configs/hae_segnn_lin/: hook.yaml  rpf.yaml  tgv.yaml
configs/hae_segnn_tp/: hook.yaml  rpf.yaml  tgv.yaml
configs/ldc_2d/: acdm.yaml  base.yaml  egnn.yaml  gns.yaml  pde_refiner.yaml  segnn.yaml
configs/ldc_3d/: base.yaml  gns.yaml  segnn.yaml
configs/rpf_2d/: acdm.yaml  base.yaml  egnn.yaml  gcn.yaml  gns.yaml  painn.yaml  pde_refiner.yaml  segnn.yaml
configs/rpf_3d/: base.yaml  egnn.yaml  gns.yaml  painn.yaml  segnn.yaml
configs/segnn/: hook.yaml  rpf.yaml  tgv.yaml
configs/tgv/: gns.yaml  segnn.yaml
configs/tgv_2d/: acdm.yaml  base.yaml  gns.yaml  pde_refiner.yaml  segnn.yaml
configs/tgv_3d/: base.yaml  gns.yaml  segnn.yaml
data_gen/gns_data/: README.md  download_dataset.sh  reading_utils.py
data_gen/lagrangebench_data/: README.md  count_files.py  dataset_db.sh  dataset_ldc.sh  dataset_rpf.sh  dataset_tgv.sh  gen_dataset.py  plot_frame.py
data_utils/: boxbath.py  boxbath_to_h5.py  common.py  download_dataset.sh  reading_utils.py  tfrecord_to_h5.py
docs/: conf.py  index.rst  requirements.txt
docs/pages/: baselines.rst  case_setup.rst  data.rst  defaults.rst  evaluate.rst  models.rst  train.rst  tutorial.rst  utils.rst
docs/pages/tutorials/: datasets.rst  gns_data.rst  intro.rst
equisph/: configs.py  run.py  train.py  utils.py
equisph/case_setup/: __init__.py  case.py  features.py  partition.py
equisph/data/: __init__.py  data.py  utils.py
equisph/evaluate/: metrics.py  rollout.py
equisph/evaluation/: __init__.py  metrics.py  rollout.py
equisph/models/: __init__.py  asegnn.py  base.py  egnn.py  gns.py  haesegnn.py  linear.py  painn.py  segnn.py  utils.py
equisph/simulate/: __init__.py  features.py  scenario.py
experiments/: config.py  data.py  run.py  utils.py
gns_data/: README.md  tfrecord_to_h5.py
gns_jax/: configs.py  data.py  gns.py  metrics.py  utils.py
lagrangebench/: __init__.py  config.py  defaults.py  defaults.yaml  run.py  runner.py  train.py  utils.py
lagrangebench/case_setup/: __init__.py  case.py  features.py  partition.py
lagrangebench/data/: __init__.py  data.py  utils.py
lagrangebench/evaluate/: __init__.py  different_paths_rollout.py  different_samples_rollout.py  metrics.py  rollout.py  state_avg_rollout.py  utils.py
lagrangebench/models/: __init__.py  acdm.py  base.py  egnn.py  gcn.py  gns.py  linear.py  painn.py  pde_refiner.py  segnn.py  utils.py
lagrangebench/train/: __init__.py  strats.py  trainer.py
neighbors_search/: README.md  scaling.py  scaling.sh
notebooks/: data_gen.ipynb  datasets.ipynb  gns_data.ipynb  tutorial.ipynb
segnn_experiments/: asegnn.py  rsegnn.py  utils.py  visualize_attention.py
segnn_utils/: rsegnn.py  utils.py
tests/: case_test.py  models_test.py  neighbors_test.py  pushforward_test.py  rollout_test.py  runner_test.py  test_setup.py
tests/3D_LJ_3_1214every1/: metadata.json  test.h5  train.h5  valid.h5
thesis_results/multiple_samples/: info.txt
thesis_results/state_avg/: info.txt
